@@ -4,6 +4,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'jacoco'
     id 'checkstyle'
+    id 'distribution'
 }
 
 group 'com.jpasikainen'
@@ -25,10 +26,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
+    mainModule = 'com.jpasikainen.tira'
     mainClass = 'com.jpasikainen.tira.Game'
-    applicationDefaultJvmArgs = [
-            "--module-path=/usr/share/java/lib",
-            "--add-modules=javafx.controls,javafx.fxml"]
 }
 
 mainClassName = '$moduleName/com.jpasikainen.tira.Game'
@@ -61,19 +60,6 @@ jacocoTestReport {
 checkstyle {
     ignoreFailures = true
     checkstyleMain.source = "src"
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'com.jpasikainen.tira.Game'
-        )
-    }
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 checkstyleMain.exclude('main/java/com/jpasikainen/tira/gui/*.java')
